# szymonmiks.pl

./: .gitignore  .gitmodules  404.html  README.md  gulpfile.js  index.html  package-lock.json  package.json  pdf-generate-command.txt
blog/: .gitmodules  README.md  config.yaml
blog/assets/: jsconfig.json
blog/assets/scss/partials/: article.scss
blog/content/categories/AWS/: _index.md
blog/content/categories/Architecture/: _index.md
blog/content/categories/DDD/: _index.md
blog/content/categories/General/: _index.md
blog/content/categories/Life/: _index.md
blog/content/categories/Python/: _index.md
blog/content/categories/Software_Development/: _index.md
blog/content/categories/Testing/: _index.md
blog/examples/: .pre-commit-config.yaml  Makefile  pyproject.toml  setup.cfg
blog/examples/example-project/: Makefile  README.md  pyproject.toml  setup.cfg
blog/examples/example-project/docs/adr/: adr-001-example_adr.md
blog/examples/example-project/docs/api/: openapi.yaml
blog/examples/exmaple-project/: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
blog/examples/exmaple-project/docs/api/: openapi.yaml
blog/examples/exmaple-project/http_requests/: ping.http
blog/examples/src/assume_iam_role/: __init__.py  delete_secret.py  errors.py
blog/examples/src/athena/: athena_client.py
blog/examples/src/business_logic_in_controllers/: example1.py
blog/examples/src/classical_vs_london/: account.py  database.py  event_bus.py  example.py
blog/examples/src/command_bus_examples/: apos_command_bus.py  command.py  command_bus.py  command_bus_using_generics.py  custom_types.py  errors.py  generic_handler.py  kink_command_bus.py  simple_command_bus.py
blog/examples/src/command_bus_examples/fast_api_example/: app.py  bootstrap.py  command_handlers.py  commands.py  entity_id.py  errors.py  repository.py  user.py
blog/examples/src/domain_model_with_sqlalchemy/: errors.py
blog/examples/src/domain_model_with_sqlalchemy/imperative_mapping/domain/: date_range.py  entity_id.py  library_card.py  library_card_repository.py  rental.py  status.py
blog/examples/src/domain_model_with_sqlalchemy/imperative_mapping/infrastructure/: __init__.py  sql_alchemy_library_card_repository.py
blog/examples/src/domain_model_with_sqlalchemy/separate_model/domain/: date_range.py  library_card.py  library_card_repository.py  rental.py  status.py
blog/examples/src/domain_model_with_sqlalchemy/separate_model/infrastructure/: model.py  sql_alchemy_library_card_repository.py
blog/examples/src/external_api_retry/: email_address.py  university_email_address_validator.py
blog/examples/src/external_api_testing/: university_email_address_validator.py
blog/examples/src/optimistic_locking/: dynamodb_wallet_repository.py  errors.py  mongo_wallet_repository.py  repository.py  sqlite_wallet_repository.py  wallet.py  wallet_mapper.py
blog/examples/src/outbox_pattern/: __init__.py  db.sqlite  main.py  outbox_procesor.py
blog/examples/src/outbox_pattern/notifications/: handlers.py
blog/examples/src/outbox_pattern/outbox/: message.py  message_outbox.py  outbox_processor.py  sql_alchemy_message_outbox.py
blog/examples/src/outbox_pattern/shared/: db.py  entity_id.py  errors.py  event.py  event_bus.py
blog/examples/src/value_object_examples/: analysis_params.py  open_ssh.py  price.py  ssh2.py
blog/examples/tests/test_assume_iam_role/: conftest.py  test_delete_secret.py
blog/examples/tests/test_athena/: test_athena_client.py
blog/examples/tests/test_athena/fixtures/: example_athena_response.json
blog/examples/tests/test_classical_vs_london/: test_transaction_processor.py
blog/examples/tests/test_command_buses/: fixtures.py  test_apos_command_bus.py  test_command_bus_using_generics.py  test_kink_command_bus.py  test_simple_command_bus.py
blog/examples/tests/test_domain_model_with_sqlalchemy/: conftest.py
blog/examples/tests/test_domain_model_with_sqlalchemy/imperative_mapping/: test_sql_alchemy_library_card_repository.py
blog/examples/tests/test_domain_model_with_sqlalchemy/separate_model/: test_sql_alchemy_library_card_repository.py
blog/examples/tests/test_external_apI_testing/vcrpy/: correct_university_email_address.yaml
blog/examples/tests/test_external_apI_testing/wiremock/: docker-compose.yml
blog/examples/tests/test_external_api_testing/: conftest.py
blog/examples/tests/test_external_api_testing/bad_example_dont_use_it/: test_university_email_address_validator.py
blog/examples/tests/test_external_api_testing/responses/: test_university_email_address_validator.py
blog/examples/tests/test_external_api_testing/vcrpy/: incorrect_university_email_address.yaml  test_university_email_address_validator.py
blog/examples/tests/test_external_api_testing/wiremock/: conftest.py  test_university_email_address_validator.py
blog/examples/tests/test_optimistic_locking/: conftest.py  test_dynamodb_repository.py  test_mongodb_repository.py  test_sqlite_repository.py  test_version.py  test_wallet.py
blog/examples/tests/test_outbox_pattern/: conftest.py  db.sqlite
blog/examples/tests/test_outbox_pattern/outbox/: db.sqlite  test_message_type.py  test_outbox_processor.py  test_sql_alchemy_message_outbox.py
blog/examples/tests/test_retry_mechanism/: test_university_email_address_validator.py
blog/examples/tests/test_value_objects_examples/: test_email_address.py  test_price.py
css/: style.css  styles.min.css
cv/: index.html  style.css
js/: script.js  scripts.min.js
js/vendors/: argon.min.js  bootstrap.min.js  jquery.min.js  particles.json  particles.min.js  popper.min.js
szymonmiks-deployment/: .exmaple-env  .pre-commit-config.yaml  Makefile  deploy.py  docker-compose.yml  pyproject.toml  setup.cfg
szymonmiks-deployment/szymonmiks_deployment/: config.py  deployment_manager.py  factory.py  file_collector.py  ftp_client.py  logger.py
szymonmiks-deployment/tests/: conftest.py  test_config.py  test_file_collector.py
szymonmiks-deployment/tests/integration/: test_deployment_manager.py  test_paramiko_ftp_client.py
(+47 files in other folders)
