[tool.poetry]
name = "examples"
version = "0.1.0"
description = "Code examples for blog posts purpose"
authors = ["Szymon Miks <miks.szymon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
mypy-boto3-dynamodb = "^1.24.55"
pymongo = "^4.2.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pre-commit = "^2.20.0"
pytest-cov = "^3.0.0"
moto = "^4.0.0"
mongomock = "^4.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]