[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.coverage.report]
exclude_lines = [
  "def __repr__",
  "if 0:",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "nocov",
  "pass",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError"
]
fail_under = 80
show_missing = true

[tool.coverage.run]
branch = true
omit = [
  "tests/*"
]

[tool.isort]
combine_as_imports = "true"
force_grid_wrap = 0
include_trailing_comma = "true"
known_first_party = "src"
line_length = 120
multi_line_output = 3

[tool.mypy]
disallow_untyped_defs = true
exclude = [
  "example-project"
]
follow_imports = "silent"
ignore_missing_imports = true
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.poetry]
authors = ["Szymon Miks <miks.szymon@gmail.com>"]
description = "Code examples for blog posts purpose"
name = "examples"
version = "0.1.0"

[tool.poetry.dependencies]
apos = "^0.2.1.2"
chili = "^1.8.0"
mypy-boto3-dynamodb = "^1.26"
pymongo = "^4.3"
python = "^3.9"
rocketry = "^2.5.1"
sqlalchemy = "^1.4.44"
structlog = "^22.3.0"

[tool.poetry.dev-dependencies]
black = "^23.1"
flake8 = "^6.0"
isort = "^5.12"
mongomock = "^4.1.2"
moto = "^4.1"
mypy = "^1.0"
pre-commit = "^3.0"
pytest = "^7.2"
pytest-cov = "^4.0"
toml-sort = "^0.22"

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report term-missing --no-cov-on-fail"
testpaths = ["tests"]
